--- a/win32/SweetCrush.vcxproj.filters
+++ b/win32/SweetCrush.vcxproj.filters
@@ -22,9 +22,6 @@
     <ClCompile Include="..\SweetCrush\src\Game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\SweetCrush\src\LeaveGamePanel.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\SweetCrush\src\Localization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
     <ClCompile Include="..\SweetCrush\src\GameCompletePanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\SweetCrush\src\PauseGameScreen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\SweetCrush\src\MatchStats.h">
@@ -97,9 +97,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\SweetCrush\src\GameSettings.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\SweetCrush\src\LeaveGamePanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\SweetCrush\src\Localization.h">
@@ -145,6 +142,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\SweetCrush\src\GameCompletePanel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SweetCrush\src\PauseGameScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
