--- a/android/main.vcxproj.filters
+++ b/android/main.vcxproj.filters
@@ -147,5 +147,8 @@
     <ClInclude Include="..\SweetCrush\src\PauseGameScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\SweetCrush\src\Boosters.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
