--- a/android/SDL2_mixer.vcxproj.filters
+++ b/android/SDL2_mixer.vcxproj.filters
@@ -30,273 +30,99 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_mikmod.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_modplug.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_mpg123.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_nativemidi.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_ogg.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_opus.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_timidity.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_wav.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\effect_position.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\effect_stereoreverse.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\effects_internal.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\load_aiff.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\load_voc.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\mixer.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_cmd.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_flac.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_fluidsynth.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\music_mad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libogg-1.3.2\src\framing.c">
-      <Filter>ogg\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libogg-1.3.2\src\bitwise.c">
-      <Filter>ogg\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\smallft.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\synthesis.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\tone.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\vorbisenc.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\vorbisfile.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\window.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\bitrate.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\block.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\codebook.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\envelope.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\floor0.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\floor1.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\info.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lookup.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lpc.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lsp.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\mapping0.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\mdct.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\psy.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\registry.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\res0.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\sharedbook.c">
-      <Filter>vorbis\src</Filter>
-    </ClCompile>
+    <ClCompile Include="..\external\SDL_mixer\src\effects_internal.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\effect_position.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\effect_stereoreverse.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libogg-1.3.2\src\bitwise.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libogg-1.3.2\src\framing.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\bitrate.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\block.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\codebook.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\envelope.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\floor0.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\floor1.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\info.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lookup.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lpc.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lsp.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\mapping0.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\mdct.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\psy.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\registry.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\res0.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\sharedbook.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\smallft.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\synthesis.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\tone.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\vorbisenc.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\vorbisfile.c" />
+    <ClCompile Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\window.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\load_aiff.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\load_voc.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\mixer.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\music.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\utils.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_cmd.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_flac.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_fluidsynth.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_mad.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_mikmod.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_modplug.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_mpg123.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_nativemidi.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_ogg.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_opus.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_timidity.c" />
+    <ClCompile Include="..\external\SDL_mixer\src\codecs\music_wav.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_timidity.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_wav.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\effects_internal.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\load_aiff.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\load_voc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\mixer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_cmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_flac.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_fluidsynth.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_mad.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_mikmod.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_modplug.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_mpg123.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_nativemidi.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_ogg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\music_opus.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libogg-1.3.2\include\ogg\ogg.h">
-      <Filter>ogg\includes\ogg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libogg-1.3.2\include\ogg\os_types.h">
-      <Filter>ogg\includes\ogg</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\include\vorbis\codec.h">
-      <Filter>vorbis\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\include\vorbis\vorbisenc.h">
-      <Filter>vorbis\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\include\vorbis\vorbisfile.h">
-      <Filter>vorbis\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\smallft.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\window.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\backends.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\bitrate.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\codebook.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\codec_internal.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\envelope.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\highlevel.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lookup.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lookup_data.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lpc.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lsp.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\masking.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\mdct.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\misc.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\os.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\psy.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\registry.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\scales.h">
-      <Filter>vorbis\src</Filter>
-    </ClInclude>
+    <ClInclude Include="..\external\SDL_mixer\effects_internal.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libogg-1.3.2\include\ogg\ogg.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libogg-1.3.2\include\ogg\os_types.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\include\vorbis\codec.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\include\vorbis\vorbisenc.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\include\vorbis\vorbisfile.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\backends.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\bitrate.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\codebook.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\codec_internal.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\envelope.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\highlevel.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lookup.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lookup_data.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lpc.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lsp.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\masking.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\mdct.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\misc.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\os.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\psy.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\registry.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\scales.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\smallft.h" />
+    <ClInclude Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\window.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\load_aiff.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\load_voc.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\mixer.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\music.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\utils.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_cmd.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_flac.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_fluidsynth.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_mad.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_mikmod.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_modplug.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_mpg123.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_nativemidi.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_ogg.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_opus.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_timidity.h" />
+    <ClInclude Include="..\external\SDL_mixer\src\codecs\music_wav.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\external\SDL2_mixer-2.0.4\external\libogg-1.3.2\include\ogg\config_types.h.in">
-      <Filter>ogg\includes\ogg</Filter>
-    </None>
-    <None Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\lookups.pl">
-      <Filter>vorbis\src</Filter>
-    </None>
-    <None Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\Makefile.am">
-      <Filter>vorbis\src</Filter>
-    </None>
-    <None Include="..\external\SDL2_mixer-2.0.4\external\libvorbis-1.3.5\lib\Makefile.in">
-      <Filter>vorbis\src</Filter>
-    </None>
+    <None Include="..\external\SDL_mixer\external\libogg-1.3.2\include\ogg\config_types.h.in" />
+    <None Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\lookups.pl" />
+    <None Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\Makefile.am" />
+    <None Include="..\external\SDL_mixer\external\libvorbis-1.3.6\lib\Makefile.in" />
   </ItemGroup>
 </Project>
